--- a/styles/index.css
+++ b/styles/index.css
@@ -2,19 +2,68 @@ body{
 margin:0;
 padding:0;
 line-height: 1.5em;
-background-color: #0c459c;
+background-color: #fff;
 }
 
+#navbar {
+    overflow: hidden;
+}
+
+#navbar {
+    height: 50px;
+    margin-left: -7px;
+    margin-right: -100%;
+    margin-top: 19px;
+    padding: 0;
+    width: 982px;
+}
+
+#navbar .menu {
+    height: 50px;
+    left: -1px;
+    margin-bottom: 20px;
+    margin-right: -2px;
+    position: relative;
+    width: 1000px;
+}
+
+#navbar ul {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+ul.menu {
+    border: medium none;
+    list-style: none outside none;
+    text-align: left;
+}
+
+#navbar .menu li.first {
+    background: url(../imagens/menu2.gif) no-repeat scroll left 0 transparent;
+}
+
+#navbar .menu li {
+    background: url(../imagens/menu2.gif) no-repeat scroll left -100px transparent;
+    font-size: 1em;
+    height: 50px;
+    list-style: none outside none;
+    text-align: center;
+}
+
+#navbar .menu li.last {
+    background: url(../imagens/menu2.gif) no-repeat scroll right 0 #00644E;
+}
 b{font-size: 110%;}
 em{color: red;}
 
-#maincontainer{
-width: 900px; /*Width of main container*/
+#tudo{
+width: 85%; /*Width of main container*/
 margin: 0 auto; /*Center container on page*/
 }
 
 #topsection{
-background: #ff6600;
+background: #fff;
 height: 90px; /*Height of top section*/
 border-top-left-radius: 0.5em;
 border-top-right-radius: 0.5em;
@@ -31,16 +80,69 @@ margin: 0;
 padding-top: 15px;
 }
 
+.menu1 {padding:0 0 0 32px; margin:0; list-style:none; height:35px; background:#fff url(../imagens/button1.gif); position:relative; border:1px solid #000; border-width:0 1px; border-bottom:1px solid #444;}
+.menu1 li {float:left;}
+.menu1 li a {display:block; float:left; height:35px; line-height:35px; color:#aaa; text-decoration:none; font-size:11px; font-family:arial, verdana, sans-serif; font-weight:bold; text-align:center; padding:0 0 0 8px; cursor:pointer;}
+.menu1 li a b {float:left; display:block; padding:0 16px 0 8px;}
+.menu1 li.current a {color:#fff; background:url(../imagens/button3.gif);}
+.menu1 li.current a b {background:url(../imagens/button3.gif) no-repeat right top;}
+.menu1 li a:hover {color:#fff; background:#000 url(../imagens/button2.gif);}
+.menu1 li a:hover b {background:url(../imagens/button2.gif) no-repeat right top;}
+.menu1 li.current a:hover {color:#fff; background:#000 url(../imagens/button3.gif); cursor:default;}
+.menu1 li.current a:hover b {background:url(../imagens/button3.gif) no-repeat right top;}
+
 #middle{
- background-color: #fff;	
+	background-color: #fff;
+	margin-top: 20px;
+}
+
+#destaque{
+	border-width: 10px;
+	border-color: black;
+	background-color: #ff0000 ;
+	width: 100%;
+	height: 231px;
+}
+
+#content_tudo{
+	margin-top: 20px;
+	width: 100%;
+	height:100%;
+}
+.content_left{
+	border-color: #000;
+	width: 314px;
+	height: 173px;
+	padding-left: 30px;
+	float: left;
+}
+.content_middle{
+	border-color: #000;
+	width: 314px;
+	height: 173px;
+	padding-left: 30px;
+	float: left;
+}
+.content_right{
+	border-color: #000;
+	width: 314px;
+	height: 173px;
+	padding-left: 30px;
+	float: left;
+}
+.content_title{
+	background-color: #f1c745;
+	height: 20px;
+	width: 100%;
+}
+.content_conteudo{
+	background-color:#6592c5;
+	height: 100%;
+	width: 100%;
 }
 
 #footer{
-clear: left;
-width: 100%;
-background: #ff6600;
-color: #FFF;
-text-align: center;
+margin-top:200px;
 padding: 4px 0;
 
 border-bottom-left-radius: 0.5em;
@@ -54,11 +156,22 @@ border-bottom-right-radius: 0.5em;
 
 }
 
-#footer a{
-color: #FFFF80;
+.footer_logo{
+margin:  0 10px 0 0;
+float:left;
 }
 
-.innertube{
-margin: 10px; /*Margins for inner DIV inside each column (to provide padding)*/
-margin-top: 0;
+.footer_link{
+	color: #666666;
+    font-size: 0.95em;
+    line-height: 43px;
+    text-align: right;
+	position: relative;
+}
+
+.footer_cr{
+	color: #999999;
+    font-size: 0.8em;
+    line-height: 1.1em;
+    padding: 10px 0 0;
 }
