--- a/styles/index.css
+++ b/styles/index.css
@@ -2,19 +2,70 @@ body{
 margin:0;
 padding:0;
 line-height: 1.5em;
-background-color: #0c459c;
+background-color: #fff;
 }
 
+#navbar {
+    overflow: hidden;
+}
+
+#navbar {
+    height: 50px;
+    margin-left: -7px;
+    margin-right: -100%;
+    margin-top: 19px;
+    padding: 0;
+    width: 982px;
+}
+
+#navbar .menu {
+    height: 50px;
+    left: -1px;
+    margin-bottom: 20px;
+    margin-right: -2px;
+    position: relative;
+    width: 1000px;
+}
+
+#navbar ul {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+ul.menu {
+    border: medium none;
+    list-style: none outside none;
+    text-align: left;
+}
+
+#navbar .menu li.first {
+    background: url(../imagens/menu2.gif) no-repeat scroll left 0 transparent;
+}
+
+#navbar .menu li {
+    background: url(../imagens/menu2.gif) no-repeat scroll left -100px transparent;
+    font-size: 1em;
+    height: 50px;
+    list-style: none outside none;
+    text-align: center;
+}
+
+#navbar .menu li.last {
+    background: url(../imagens/menu2.gif) no-repeat scroll right 0 #00644E;
+}
 b{font-size: 110%;}
 em{color: red;}
 
-#maincontainer{
-width: 900px; /*Width of main container*/
-margin: 0 auto; /*Center container on page*/
+#tudo{
+width: 960px; /*Width of main container*/
+margin-left:auto; 
+margin-left:auto; /*Center container on page*/
+margin:0 auto;
 }
 
 #topsection{
-background: #ff6600;
+background: #fff;
 height: 90px; /*Height of top section*/
 border-top-left-radius: 0.5em;
 border-top-right-radius: 0.5em;
@@ -30,17 +81,114 @@ border-top-right-radius: 0.5em;
 margin: 0;
 padding-top: 15px;
 }
+/*
+.menu1 {padding:0 0 0 32px; margin:0; list-style:none; height:35px; background:#fff url(../imagens/button1.gif); position:relative; border:1px solid #000; border-width:0 1px; border-bottom:1px solid #444;}
+.menu1 li {float:left;}
+.menu1 li a {display:block; float:left; height:35px; line-height:35px; color:#aaa; text-decoration:none; font-size:11px; font-family:arial, verdana, sans-serif; font-weight:bold; text-align:center; padding:0 0 0 8px; cursor:pointer;}
+.menu1 li a b {float:left; display:block; padding:0 16px 0 8px;}
+.menu1 li.current a {color:#fff; background:url(../imagens/button3.gif);}
+.menu1 li.current a b {background:url(../imagens/button3.gif) no-repeat right top;}
+.menu1 li a:hover {color:#fff; background:#000 url(../imagens/button2.gif);}
+.menu1 li a:hover b {background:url(../imagens/button2.gif) no-repeat right top;}
+.menu1 li.current a:hover {color:#fff; background:#000 url(../imagens/button3.gif); cursor:default;}
+.menu1 li.current a:hover b {background:url(../imagens/button3.gif) no-repeat right top;}*/
+
+.menu{margin:0 auto; padding:0; height:30px; width:100%; display:block; background:url("../imagens/topMenuImages.png") repeat-x;box-shadow: #cecdcc 0.2em 0.2em 0.2em;}
+.menu li{padding:0; margin:0; list-style:none; display:inline;}
+.menu li a{float:left; padding-left:15px; display:block; color:rgb(255,255,255); text-decoration:none;
+font:12px Verdana, Arial, Helvetica, sans-serif;
+color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    height: 29px;
+    line-height: 29px;
+    padding: 0 0 0 48px;
+	margin-left:8px;
+	cursor:pointer; background:url("../imagens/topMenuImages.png") 0px -30px no-repeat; outline:none;}
+.menu li a span{line-height:30px; float:left; display:block; padding-right:15px; background:url("../imagens/topMenuImages.png") 100% -30px no-repeat;}
+.menu li a:hover{background-position:0px -60px; color:rgb(245,134,52);}
+.menu li a:hover span{background-position:100% -60px;}
+.menu li a.active, .menu li a.active:hover{line-height:30px; font:12px Verdana, Arial, Helvetica, sans-serif;
+color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    height: 29px;
+    line-height: 29px;
+    padding: 0 0 0 15px;background:url("../imagens/topMenuImages.png") 0px -90px no-repeat; color:rgb(245,134,52);}
+.menu li a.active span, .menu li a.active:hover span{background:url("../imagens/topMenuImages.png") 100% -90px no-repeat;}
+
 
 #middle{
- background-color: #fff;	
+	background-color: #fff;
+	margin-top: 10px;
+	
+}
+
+#destaque{
+	border-width: 10px;
+	border-color: black;
+	background-color: #ff0000 ;
+	width: 100%;
+	height: 231px;
+}
+
+#content_tudo{
+	margin-top: 10px;
+	width: 100%;
+	height:100%;
+
+}
+.content_left{
+	
+	width: 290px;
+	height: 150px;
+	padding-left: 20px;
+	float: left;
+}
+.content_middle{
+	
+	width: 290px;
+	height: 150px;
+	padding-left: 20px;
+	float: left;
+}
+.content_right{
+	
+	width: 290px;
+	height: 150px;
+	padding-left: 20px;
+	float: left;
+}
+.content_title{
+	width: 292px;
+	background-color: #52658c;
+	height: 25px;
+	text-decoration:none;
+	vertical-align:center;
+	font:12px Arial, Verdana, Helvetica, sans-serif; 
+	color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    height: 29px;
+    line-height: 29px;
+
+	padding: 0 0 0 5px;
+}
+.content_conteudo{
+	width: 295px;
+	text-decoration:none;
+	font:12px Arial, Verdana, Helvetica, sans-serif; 
+	color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    height: 130px;
+    line-height: 29px;
+	border:1px solid #52658c;
+	
 }
 
 #footer{
-clear: left;
-width: 100%;
-background: #ff6600;
-color: #FFF;
-text-align: center;
+margin-top:200px;
 padding: 4px 0;
 
 border-bottom-left-radius: 0.5em;
@@ -54,11 +202,37 @@ border-bottom-right-radius: 0.5em;
 
 }
 
-#footer a{
-color: #FFFF80;
+.footer_logo{
+margin:  0 10px 0 0;
+float:left;
 }
 
-.innertube{
-margin: 10px; /*Margins for inner DIV inside each column (to provide padding)*/
-margin-top: 0;
+.footer_link a{
+	color: #666666;
+    line-height: 43px;
+    text-align: right;
+	position: relative;
+	font: 0.95em Arial, Verdana, Helvetica, sans-serif;
+
+}
+
+.footer_cr{
+	color: #666666;
+	font: 0.8em Arial, Verdana, Helvetica, sans-serif;
+    line-height: 1.1em;
+    padding: 10px 0 0;
+}
+
+.footer_link  a:link, a {
+    color: #005447;
+    text-decoration: none;
+}
+.footer_link {
+	font: 0.85em Arial, Verdana, Helvetica, sans-serif;
+    line-height: 43px;
+    text-align: right;
+}
+.footer_link  a:link, a {
+    color: #005447;
+    text-decoration: none;
 }
