--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@ margin:0;
 padding:0;
 line-height: 1.5em;
 background-color: #fff;
+font-family: Verdana; 
 }
 
 #navbar {
@@ -79,97 +80,8 @@ border-top-right-radius: 0.5em;
 
 #topsection h1{
 margin: 0;
-padding-top: 15px;
+padding-top: 19px;
 }
-/*
-.menu1 {padding:0 0 0 32px; margin:0; list-style:none; height:35px; background:#fff url(../imagens/button1.gif); position:relative; border:1px solid #000; border-width:0 1px; border-bottom:1px solid #444;}
-.menu1 li {float:left;}
-.menu1 li a {display:block; float:left; height:35px; line-height:35px; color:#aaa; text-decoration:none; font-size:11px; font-family:arial, verdana, sans-serif; font-weight:bold; text-align:center; padding:0 0 0 8px; cursor:pointer;}
-.menu1 li a b {float:left; display:block; padding:0 16px 0 8px;}
-.menu1 li.current a {color:#fff; background:url(../imagens/button3.gif);}
-.menu1 li.current a b {background:url(../imagens/button3.gif) no-repeat right top;}
-.menu1 li a:hover {color:#fff; background:#000 url(../imagens/button2.gif);}
-.menu1 li a:hover b {background:url(../imagens/button2.gif) no-repeat right top;}
-.menu1 li.current a:hover {color:#fff; background:#000 url(../imagens/button3.gif); cursor:default;}
-.menu1 li.current a:hover b {background:url(../imagens/button3.gif) no-repeat right top;}
-.menu1 
-{
-	padding:0 0 0 32px; 
-	margin:0; 
-	list-style:none; 
-	height:35px; 
-	background:#fff url(../imagens/button1.gif); 
-	position:relative; 
-	border:1px solid #000; 
-	border-width:0 1px; 
-	border-bottom:1px solid #444;
-}
-
-.menu1 li
- {
-	float:left;
-}
-
-.menu1 li a 
-{
-	display:block; 
-	float:left; 
-	height:35px; 
-	line-height:35px; 
-	color:#aaa; 
-	text-decoration:none; 
-	font-size:11px; 
-	font-family:arial, verdana, sans-serif; 
-	font-weight:bold; 
-	text-align:center; 
-	padding:0 0 0 8px; 
-	cursor:pointer;
-}
-
-.menu1 li a b 
-{
-	float:left; 
-	display:block; 
-	padding:0 16px 0 8px;
-}
-
-.menu1 li.current a 
-{
-	color:#fff; 
-	background:url(../imagens/button3.gif);
-}
-
-.menu1 li.current a b 
-{
-	background:url(../imagens/button3.gif) no-repeat right top;
-}
-
-.menu1 li a:hover 
-{
-	color:#fff; 
-	background:#000 url(../imagens/button2.gif);
-}
-
-.menu1 li a:hover b 
-{
-	background:url(../imagens/button2.gif) no-repeat right top;
-}
-
-.menu1 li.current a:hover 
-{
-	color:#fff; 
-	background:#000 url(../imagens/button3.gif); 
-	cursor:default;
-}
-
-.menu1 li.current a:hover b 
-{
-	background:url(../imagens/button3.gif) no-repeat right top;
-}*/
-
-
-
-
 
 .menu
 {
@@ -192,7 +104,7 @@ padding-top: 15px;
 .menu li a
 {
 	float:left;
-    padding: 0px 15px 0px 15px;
+    padding: 0px 19px 0px 10px;
 	display:block; 
 	color:rgb(255,255,255); 
 	text-decoration:none;
@@ -209,17 +121,17 @@ padding-top: 15px;
 }
 
 .first{
-	padding: 0px 15px 0px 0px;
+	padding: 0px 19px 0px 0px;
 }
 .last{
-	padding: 0px 0px 0px 15px;
+	padding: 0px 0px 0px 10px;
 }
 .menu li a span
 {
 	line-height:30px; 
 	float:left; 
 	display:block; 
-	padding: 0px 15px 0px 15px;
+	padding: 0px 19px 0px 10px;
 	background:url("../imagens/topMenuImages.png") 100% -30px no-repeat;
 }
 
@@ -243,7 +155,7 @@ padding-top: 15px;
     font-weight: bold;
     height: 29px;
     line-height: 29px;
-	padding: 0px 15px 0px 15px;
+	padding: 0px 19px 0px 10px;
 	background:url("../imagens/topMenuImages.png") 0px -90px no-repeat; 
 	color:rgb(245,134,52);
 }
@@ -320,7 +232,35 @@ padding-top: 15px;
 	border:1px solid #52658c;
 }
 
+.text_container h1{
+   color: #ff8032;
+   font-weight: bold;
+}
+.text_container img{
+     float:left;
+}
+
+.text_container{
+   color:#52658c;
+   font-weight: bold;
+}
+
+.contact_container h1{
+    color: #ff8032;
+    font-weight: bold;
+    font:Arial, Verdana, Helvetica, sans-serif; 
+    
+}
+.contact_container{
+    color:#52658c;
+    font-weight: bold;
+}
+
 #footer{
+	padding: 50px 0;	
+}
+
+#footer_main{
 margin-top:200px;
 padding: 4px 0;
 
